@@ -1,7 +1,6 @@
 package com.bidcast.auction_service.core.outbox;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -19,8 +18,11 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class OutboxRelayTest {
 
-    @Mock private OutboxRepository outboxRepository;
-    @Mock private OutboxWorker outboxWorker;
+    @Mock
+    private OutboxRepository outboxRepository;
+
+    @Mock
+    private OutboxWorker outboxWorker;
 
     @InjectMocks
     private OutboxRelay outboxRelay;
@@ -29,58 +31,38 @@ class OutboxRelayTest {
 
     @BeforeEach
     void setUp() {
-        event = new OutboxEvent();
-        event.setId(UUID.randomUUID());
-        event.setExchange("wallet.exchange");
-        event.setRoutingKey("wallet.settlement");
-        event.setPayload("{\"spentAmount\":10.0}");
-        event.setProcessed(false);
+        event = OutboxEvent.builder()
+                .id(UUID.randomUUID())
+                .exchange("test-exchange")
+                .routingKey("test-key")
+                .payload("{}")
+                .build();
     }
 
     @Test
-    @DisplayName("Relay: Encuentra eventos y delega el procesamiento al Worker")
-    void scheduleDispatch_DelegatesToWorker() {
-        // Arrange
-        when(outboxRepository.findPending(any(PageRequest.class)))
-                .thenReturn(List.of(event));
+    void scheduleDispatch_whenNoPendingEvents_doesNothing() {
+        when(outboxRepository.findPendingBatchAndLock(any())).thenReturn(Collections.emptyList());
 
-        // Act
         outboxRelay.scheduleDispatch();
 
-        // Assert
-        verify(outboxRepository).findPending(any(PageRequest.class));
-        verify(outboxWorker).process(event.getId());
+        verify(outboxWorker, never()).process(any());
     }
 
     @Test
-    @DisplayName("Relay: Sin eventos pendientes no llama al Worker")
-    void scheduleDispatch_NoEvents_DoesNothing() {
-        // Arrange
-        when(outboxRepository.findPending(any(PageRequest.class)))
-                .thenReturn(Collections.emptyList());
+    void scheduleDispatch_whenPendingEvents_callsWorker() {
+        when(outboxRepository.findPendingBatchAndLock(any())).thenReturn(List.of(event));
 
-        // Act
         outboxRelay.scheduleDispatch();
 
-        // Assert
-        verify(outboxRepository).findPending(any(PageRequest.class));
-        verifyNoInteractions(outboxWorker);
+        verify(outboxWorker, times(1)).process(event);
     }
 
     @Test
-    @DisplayName("Relay: Batch Process delega múltiples llamadas al Worker")
-    void scheduleDispatch_Batch_DelegatesMultipleTimes() {
-        // Arrange
-        OutboxEvent event2 = new OutboxEvent();
-        event2.setId(UUID.randomUUID());
-        
-        when(outboxRepository.findPending(any(PageRequest.class)))
-                .thenReturn(List.of(event, event2));
+    void scheduleDispatch_limitTo50Events() {
+        when(outboxRepository.findPendingBatchAndLock(PageRequest.of(0, 50))).thenReturn(Collections.emptyList());
 
-        // Act
         outboxRelay.scheduleDispatch();
 
-        // Assert
-        verify(outboxWorker, times(2)).process(any(java.util.UUID.class));
+        verify(outboxRepository).findPendingBatchAndLock(PageRequest.of(0, 50));
     }
 }
